--- a/sass/_confirm-order.scss
+++ b/sass/_confirm-order.scss
@@ -1013,8 +1013,8 @@
 			li.disabled{
 				.r .r-left{
 						background-position:-339px -107px;
-						h2{color:#ccc;}
-						span{color:#ccc;}
+						h2{color:#fff;}
+						span{color:#fff;}
 					} 
 				.r .text{
 					 h2{color:#ccc;}
